# ROS-bonsai-connector

./: .gitignore  .gitmodules  README.md
package_template/: package.xml  setup.cfg  setup.py
package_template/config/: simulation_interface.json  training_debug_config.json
package_template/package_template/: bonsai_ros_base.py  policy_connection.py  policy_main.py  sim_connection.py  sim_main.py
samples/turtlebot3_bonsai/: Dockerfile  README.md  package.xml  setup.cfg  setup.py
samples/turtlebot3_bonsai/config/: env.example  env.test.example  env.train.example  training_debug_config.json  turtlebot3_sim_interface.json
samples/turtlebot3_bonsai/inkling/: sample.ink
samples/turtlebot3_bonsai/launch/: bookstore.launch.py  bookstore_test.launch.py  bookstore_train.launch.py  launch.sh  policy_with_sim.launch.py  policy_without_sim.launch.py  racetrack.launch.py  racetrack_test.launch.py  small_house.launch.py  small_house_test.launch.py  warehouse.launch.py  warehouse_test.launch.py  warehouse_train.launch.py
samples/turtlebot3_bonsai/turtlebot3_bonsai/: turtlebot3_bonsai_connection.py  turtlebot3_policy.py  turtlebot3_policy_connection.py  turtlebot3_sim.py  turtlebot3_sim_connection.py
