<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>package_template</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="email">name</maintainer>
  <license>TODO: License declaration</license>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>

    <exec_depend>bonsai-cli</exec_depend>
    <exec_depend>microsoft-bonsai-api</exec_depend>
    <exec_depend>scipy</exec_depend>
    <exec_depend>rclpy</exec_depend>
  </export>
</package>

